@@ -1,3 +1,11 @@
+2012-07-13  WOnder93  <omosnacek@gmail.com>
+
+	* Widget.cs:
+	  Properly calculate intersection of two rectangles.
+
+	* AssemblyInfo.cs:
+	  Updated the assembly version.
+
 2012-07-08  WOnder93  <omosnacek@gmail.com>
 
 	* AssemblyInfo.cs:
